--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^7.1.0",
+    "download-git-repo": "^3.0.2",
+    "handlebars": "^4.7.7",
     "inquirer": "^8.0.0",
-    "ora": "^5.3.0"
+    "ora": "^5.3.0",
+    "shelljs": "^0.8.4"
   }
 }
